--- a/2/index.html
+++ b/2/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>Lily's website</title>
+    <title>Abdullah's Website</title>
 </head>
 
 <body>
     <h1>Hello, World</h1>
-    <p>I'm Lily and I love programming</p>
+    <p>I'm Abdullah and I love programming</p>
 </body>
 
 </html>
