--- a/5/index.html
+++ b/5/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Lily's website</title>
+    <title>Abdullah's website</title>
     <style>
         h1 {
             background-color: black;
@@ -13,7 +13,7 @@
             color: red;
         }
 
-        .about_lily {
+        .about_abdullah {
             color: green;
         }
     </style>
@@ -21,8 +21,8 @@
 
 <body>
     <h1 id="header">Hello, World</h1>
-    <p class="about_lily">I'm lily and I love programming</p>
-    <p class="about_lily">If you want to know me <a href="pages/about_lily.html"> click here</a></p>
+    <p class="about_abdullah">I'm Abdullah and I love programming JavaScript</p>
+    <p class="about_abdullah">If you want to know more me <a href="pages/about_abdullah.html"> click here</a></p>
 </body>
 
 </html>
