--- a/6/index.html
+++ b/6/index.html
@@ -3,15 +3,15 @@
 <html>
 
 <head>
-    <title>Lily's website</title>
+    <title>Abdullah's Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="content">
         <h1 id="header">Hello, World</h1>
-        <p class="about_lily">I'm lily and I love programming</p>
-        <p class="about_lily">If you want to know me <a href="pages/about_lily.html"> click here</a></p>
+        <p class="about_lily">I'm Abdullah and I love programming</p>
+        <p class="about_lily">If you want to know more me <a href="pages/about_abdullah.html"> click here</a></p>
     </div>
 </body>
 
