--- a/3/index.html
+++ b/3/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Lily's website</title>
+    <title>Abdullah's Website</title>
 </head>
 
 <body>
     <h1>Hello, World</h1>
-    <p>I'm Lily and I love programming</p>
-    <p>Hey, if you want to see my other website <a href="lilyswebsite2.html">click here</a>
+    <p>I'm Abdullah and I love programming with JavaScript</p>
+    <p>Hey, if you want to know more about me <a href="about_abdullah.html">click here</a>
     </p>
 </body>
 
