--- a/4/index.html
+++ b/4/index.html
@@ -3,13 +3,13 @@
 <html>
 
 <head>
-    <title>Lily's website</title>
+    <title>Abdullah's website</title>
 </head>
 
 <body>
     <h1>Hello, World</h1>
-    <p>I'm lily and I love programming</p>
-    <p>If you want to know me <a href="pages/about_lily.html"> click here</a></p>
+    <p>I'm Abdullah and I love programming with JavaScript</p>
+    <p>If you want to know more me <a href="pages/about_abdullah.html"> click here</a></p>
 </body>
 
 </html>
