--- a/8/index.html
+++ b/8/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Lily's website</title>
-
+    <title>Abdullah's Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
@@ -11,44 +10,43 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <ul class="nav mb-5">
+        <li class="nav-item mt-3">
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item mt-3">
+            <a class="nav-link" href="pages/contact.html">Contact</a>
+        </li>
+    </ul>
 
     <div class="container-fluid">
-        <h3 class="header text-center">Welcome to my website</h3>
+        <h3 class="text-center mb-5">Welcome to my website</h3>
         <div class="row">
             <div class="col-md-4">
                 <div class="text-center">
-                    <img src="pics/lily.jpg" class="rounded mb-3" alt="Lily Smith">
-                    <p class="name">Lily Smith</p>
+                    <img src="pics/abdullah.jpg" class="rounded-circle mb-3 avatar" alt="Abdullah Elsayed">
+                    <p class="name">Abdullah Elsayed</p>
                     <span class="social-media">
-                        <a href="#" target="_blank" class="text-body">
+                        <a href="#" target="_blank" class="text-body ml-2">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-body">
+                        <a href="#" target="_blank" class="text-body ml-2">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-body">
+                        <a href="#" target="_blank" class="text-body ml-2">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-body">
+                        <a href="#" target="_blank" class="text-body ml-2">
                             <i class="fab fa-github"></i>
                         </a>
                     </span>
                     <p class="mt-2">
-                        Hello, I'm Lily. I'm a Computer Science student at UoB. I love programming with JavaScript.
+                        Hello, I'm Abdullah. I'm a Computer Science student at UoB and I love programming with
+                        JavaScript.
                     </p>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <h4>Skills</h4>
                 <div class="row mb-5">
                     <div class="col-md-4">
